# NEW_Genome_1.0

./: .gitignore  CMakeLists.txt  README.md  genome
Genome_ChangeLog/Genome_ChangeLog/: main.cpp  tests.cpp  tests.h
code/: AbstractGenome.h  CMakeCache.txt  CMakeLists.txt  ChangelogTests.cpp  ChangelogTests.h  GeneSegment.h  Genome.h  GenomeLite.h  Handler.cpp  Handler.h  IndexTable.h  JamellGenome.cpp  JamellGenome.h  JoryGenome.cpp  JoryGenome.h  Makefile  Mutation.h  MutationHeap.h  MutatorHandler.cpp  MutatorHandler.h  NK_FitnessEvaluator.cpp  NK_FitnessEvaluator.h  SegmentList.h  SegmentNode.cpp  SegmentNode.h  StephanieGenome.cpp  StephanieGenome.h  StephanieGenomeTest.h  TD_NKFitnessEvaluator.cpp  TD_NKFitnessEvaluator.h  TestGenome.cpp  TestGenome.h  TestGenome.h.orig  TetianaChangeLog.cpp  TetianaGenome.cpp  TetianaGenome.h  TetianaTests.cpp  TetianaTests.h  UmaChangelogTests.h  UmaGenome.cpp  (+14 more)
code/Bench/: CMakeLists.txt  CloneBench.cpp  SimpleBench.cpp  VictoriaBenchs.cpp  bench.cpp  build.sh
code/Benching/: Bench.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
code/Genome/: AbstractGenome.h
code/Genome/GenomeLite/: GeneSegment.h  GenomeLite.cpp  GenomeLite.h  MemoryPool.h  SegmentNode.cpp  SegmentNode.h  SegmentPool.h  SegmentTree.cpp  SegmentTree.h
code/GenomeLite/: GeneSegment.h  GenomeLite.cpp  GenomeLite.h  SegmentList.cpp  SegmentList.h  SegmentNode.cpp  SegmentNode.h  SegmentPool.h  SegmentTree.cpp  SegmentTree.h
code/GenomeLite2/: GeneSegment.h  GenomeLite.cpp  GenomeLite.h  SegmentNode.cpp  SegmentNode.h  SegmentPool.h  a.out  main.cpp
code/Genomes/: AbstractGenome.h  CMakeLists.txt  Makefile  StephanieGenome.cpp  StephanieGenome.h  TestGenome.cpp  TestGenome.h  TetianaGenome.cpp  TetianaGenome.h  UmaGenome.cpp  UmaGenome.h  Uma_NKEvaluator.h  cmake_install.cmake
code/Genomes/GenomeLite/: GenomeLite.cpp  GenomeLite.h  SegmentList.cpp  SegmentList.h  SegmentNode.h  SegmentPool.h
code/Test/: CMakeLists.txt  CliffTests.h  InvalidMutationTests.h  StephanieGenomeTest.h  UmaChangelogTests.h  UmaTests.h  VictoriaTests.h  main.cpp
code/Testing/: CMakeCache.txt  CMakeLists.txt  Makefile  TestGenomeLite.h  cmake_install.cmake  main.cpp  memoryTest.sh  test
code/Tests/: TetianaTests.cpp  UmaChangelogTests.h  VictoriaTests.h
code/Tools/: benchUtilities.h  catch.hpp  random.h  utilities.h
code/Tools/Sequences/: 100000List.txt  20000List.txt  250000List.txt  500000List.txt  50000List.txt  5000List.txt  75000List.txt
code/benching/: BenchMutation.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
code/experimentation/: AbstractGenome.h  AbstractHandler.h  GeneSegment.h  GenomeLite.cpp  GenomeLite.h  SegmentNode.cpp  SegmentNode.h  SegmentPool.h  SegmentTree.cpp  SegmentTree.h  build.sh  heapTest.sh  main.cpp  memoryTest.sh  tee.py  test
code/experimentation/GenomeLite/: GeneSegment.h  Genome.h  GenomeLite.cpp  GenomeLite.h  SegmentNode.cpp  SegmentNode.h  SegmentPool.h  SegmentTree.cpp  SegmentTree.h
code/experimentation/GenomeLite/testing/: TestGenomeLite.h  TestHandler.h  TestHandlerMutations.h
code/experimentation/SimpleGenome/: SimpleGenome.h
code/experimentation/handlers/: MutatorHandler.h
code/experimentation/testing/: TestHandler.h  TestHandlerMutations.h  TestMutatorHandler.h  TestTree.h
code/handlers/: Handler.cpp  Handler.h  MutatorHandler.cpp  MutatorHandler.h
code/old/: GenomeLite.h  main.cpp  test
code/old/handlers/: Handler.cpp  MutatorHandler.cpp
code/old/testing/: TestMutatorHandler.h
code/testing/: CMakeCache.txt  CMakeLists.txt  HandlerTest.cpp  HandlerTest.h  Makefile  TestHandler.h  TestMutatorHandler.h  cmake_install.cmake  main.cpp  test
